# baxter_tictactoe

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README  README.md  custom_rosconsole.conf  dependencies.rosinstall  mainpage.dox  package.xml  safe_joint_angles.cpp  safe_locations.cpp  safe_locations.txt
baxter/tictactoe/: CMakeLists.txt  manifest.xml
baxter/tictactoe/action/: PlaceToken.action
baxter/tictactoe/launchers/: baxter_trajectory_controller.launch  control_tictactoe.launch  mechanistic_tictactoe.launch  smooth_tictactoe.launch  tictactoe.launch
baxter/tictactoe/resources/test/: raw.positions
baxter/tictactoe/resources/trajectories/: back@0x0.rawt  back@1x1.positions  back@1x1.rawt  back@1x2.rawt  back@1x3.positions  back@1x3.rawt  back@2x1.rawt  back@2x2.positions  back@2x2.rawt  back@2x3.rawt  back@3x1.positions  back@3x1.rawt  back@3x2.positions  back@3x2.rawt  back@3x3.positions  bottom_1x1.raw  bottom_1x3.raw  bottom_2x1.raw  bottom_2x2.raw  bottom_3x2.raw  concat_xml_traj_files.sh  grasp.rawt  grasp_mech_1.raw  grasp_mech_2.raw  home.raw  home_2steps.positions  mech_back@1x2.rawt  mech_back@1x3.rawt  (+33 more)
baxter/ttt_board_sensor/: CMakeLists.txt  custom_rosconsole.conf  mainpage.dox  manifest.xml
baxter/ttt_board_sensor/launch/: board_display.launch  board_scheme_node.launch  board_state_sensor.launch  board_state_sensor_node.launch  cells_definition.launch  display_board_cells.launch  hsv_range_finder.launch  ttt_board_sensor.launch  usb_cam-test.launch
baxter/ttt_board_sensor/msg/: ttt_board.msg
baxter/ttt_board_sensor/resources/: ttt_board_lab.xml
baxter/ttt_board_sensor/src/: board_state_sensing.cpp  show_board_cells.cpp  ttt_definitions.h
lib/: CMakeLists.txt
lib/include/: board_cells_delimitation.h  board_motion_detection.h  move_maker.h  my_ros_utils.h  tictactoe_utils.h  trajectory_player.h  vacuum_gripper.h
lib/include/arm_control/: arm_controller.h
lib/include/arm_controller/: arm_controller.h  gripper.h
lib/include/baxterTictactoe/: tictactoe_utils.h
lib/include/baxter_tictactoe/: tictactoe_utils.h  ttt_controller.h  ttt_head_controller.h
lib/include/baxter_ttt_perception/: detection.h  tile_detection.h
lib/include/move_maker/: move_maker.h  trajectory_player.h
lib/include/robot_state/: robot_state.h
lib/include/trajectory_player/: trajectory_player.h
lib/include/ttt_controller/: ttt_controller.h
lib/include/ttt_controllers/: ttt_controllers.h
lib/include/vacuum_gripper/: vacuum_gripper.h
lib/src/: arm_controller.cpp  gripper.cpp  move_maker.cpp  robot_state.cpp  tictactoe_utils.cpp  trajectory_player.cpp  trajectory_xml_parser.cpp  ttt_controllers.cpp  vacuum_gripper.cpp
lib/src/baxter_tictactoe/: tictactoe_utils.cpp  ttt_controller.cpp  ttt_head_controller.cpp
lib/src/board_sensor/: board_cells_delimitation.cpp  board_motion_detection.cpp  board_scheme.cpp  board_state_sensing.cpp  hsv_range_finder.cpp  show_board_cells.cpp  tictactoe_utils.cpp
lib/src/brain/: ttt_brain.cpp
lib/src/move_maker/: move_maker_server.cpp
lib/src/robot_state/: test_robot_state.cpp
lib/src/trajectory_player/: trajectory_player.cpp
lib/src/ttt_controller/: ttt_controller.cpp
my_ik_test/: CMakeLists.txt  keypad_definitions.h  mainpage.dox  manifest.xml
my_ik_test/launchers/: kinematic_tutorial.launch
my_ik_test/src/: follow_joint_trajectory_demo.cpp  ik_client.cpp  keypad.cpp  kinematics_demo.cpp  kinematics_ros_api_demo.cpp  listening_joint_states.cpp  motion_detection.cpp  moveit_test.cpp  pick_place_tutorial.cpp  play_trajectory_from_file.cpp  two_trajectories_demo.cpp
tictactoe/: CMakeLists.txt  mainpage.dox  package.xml
tictactoe/launch/: baxter_trajectory_controller.launch  check_board_position.launch  screen.launch  tictactoe.launch
tictactoe/launchers/: mechanistic_tictactoe.launch  screen.launch
tictactoe/resources/trajectories/: about_over_heap.raw  back@1x1.rawt  back@1x2.positions  back@2x1.positions  back@2x3.positions  back@2x3.rawt  back@3x3.rawt  bottom_2x3.raw  bottom_3x1.raw  bottom_3x3.raw  bottom_heap.raw  home.positions  left_arm_joints_to_file.sh  mech_back@2x1.rawt  mech_back@2x2.rawt  mech_put@2x1.rawt  mech_put@2x3.rawt  mech_put@3x1.rawt  over_1x1.positions  over_1x2.raw  over_1x3.raw  over_2x2.positions  over_2x3.positions  over_3x1.positions  over_3x3.raw  put@1x2.rawt  put@2x3.positions  put@3x1.rawt  put@3x2.rawt  put@3x3.positions  trajectories_over_heap_safe.xml
tictactoe/src/brain/: ttt_brain.cpp
tictactoe/src/move_maker/: move_maker.cpp  move_maker.h  move_maker_server.cpp  ttt_moves_trajectories.h
tictactoe/src/robot_state/: robot_state.cpp  robot_state.h
tictactoe/src/trajectory_player/: test_trajectory_player.cpp  trajectory_player.cpp  trajectory_player.h
tictactoe/src/trajectory_xml_parser/: concat_trajectory_xml_files.cpp  trajectory_from_raw_to_xml.cpp  trajectory_xml_parser.h
tictactoe/src/utils/: BufferToggle.h  test_thread_safe_variable.cpp
tictactoe/src/vacuum_gripper/: test_vacuum_gripper.cpp  vacuum_gripper.cpp  vacuum_gripper.h
ttt_board_sensor/: CMakeLists.txt  custom_rosconsole.conf  mainpage.dox  package.xml
ttt_board_sensor/include/ttt/: tictactoe_utils.h  ttt_definitions.h
ttt_board_sensor/launch/: board_display.launch  board_motion_detection.launch  board_scheme_node.launch  board_state_sensor.launch  cells_definition.launch  display_board_cells.launch  hsv_range_finder.launch  ttt_board_sensor.launch  usb_cam_node.launch
ttt_board_sensor/msg/: ttt_board.msg
ttt_board_sensor/resources/: ttt_board_lab.xml  ttt_board_lab_B.xml
ttt_board_sensor/sample/: fake_board_sensor.py
ttt_board_sensor/src/: board_cells_delimitation.cpp  board_cells_delimitation.h  board_motion_detection.cpp  board_scheme.cpp  board_state_sensing.cpp  hsv_range_finder.cpp  show_board_cells.cpp  tictactoe_utils.cpp  ttt_cells.cpp  ttt_cells.h  ttt_definitions.h
ttt_board_sensor/src/hsv_range_finder/: hsv_range_finder.cpp
ttt_board_sensor/src/motion_detection/: board_motion_detection.cpp
ttt_board_sensor/src/tictactoe_board_display/: board_scheme.cpp
(+154 files in other folders)
